<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="top"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">



        <TextView
            android:id="@+id/tv_market"
            style="@style/ScrollViewText"


            android:text="@string/market"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_binamce"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_binamce"
            style="@style/ScrollViewText"


            android:text="@string/binance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_wazirX"
            app:layout_constraintStart_toEndOf="@+id/tv_market"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_wazirX"
            style="@style/ScrollViewText"

            android:text="@string/wazirx"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_price_gap"
            app:layout_constraintStart_toEndOf="@+id/tv_binamce"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_price_gap"
            style="@style/ScrollViewText"

            android:text="@string/gap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_change"
            app:layout_constraintStart_toEndOf="@+id/tv_wazirX"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/tv_change"
            style="@style/ScrollViewText"

            android:text="@string/change"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_price_gap"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


