<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header_bg"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00C853"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/add_bg"
            android:closeIcon="@drawable/ic_baseline_close_24"
            android:elevation="8dp"
            android:iconifiedByDefault="true"
            android:imeOptions="actionGo"
            android:inputType="textCapWords"
            android:queryHint="Search Coin.."
            app:layout_constraintBottom_toTopOf="@+id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/add_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/add_bg"
            android:elevation="4dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/ic_baseline_add_24"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="343dp"
            tools:layout_editor_absoluteY="7dp" />

    </androidx.appcompat.widget.Toolbar>


    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ScrollViewCount">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_bg"
                android:elevation="8dp"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/ScrollViewText"
                    android:text="@string/market"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_binamce"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    style="@style/ScrollViewText"

                    android:text="@string/binance"

                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_wazirX"
                    app:layout_constraintStart_toEndOf="@+id/tv_market"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/ScrollViewText"
                    android:text="@string/wazirx"

                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_price_gap"
                    app:layout_constraintStart_toEndOf="@+id/tv_binamce"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    style="@style/ScrollViewText"
                    android:text="@string/gap"

                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_change"
                    app:layout_constraintStart_toEndOf="@+id/tv_wazirX"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="HardcodedText" />

                <TextView
                    style="@style/ScrollViewText"
                    android:text="@string/change"

                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_price_gap"
                    app:layout_constraintTop_toTopOf="parent" />

            </TableRow>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B9F6CA"
                android:nestedScrollingEnabled="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <FrameLayout

                android:id="@+id/fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B9F6CA"
                android:nestedScrollingEnabled="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:visibility="gone"/>


        </TableLayout>


    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>